[package]
name = "cargo-doc-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
camino = "1.0.5"
cargo_metadata = "0.14.1"
fehler = "1.0.0"
fn-error-context = "0.2.0"
indent_write = "2.2.0"
rustdoc-types = "0.11.0"
serde_json = "1.0.72"
